--- a/page1.html
+++ b/page1.html
@@ -16,10 +16,10 @@
 
     <section class="header">
       <nav>
-        <a href="page.html"><img src="slike/logo.jpg">
+        <a href="index.html"><img src="slike/logo.jpg">
           <div class="nav-links">
             <ul>
-              <li><a href="page.html">Pocetna</a></li>
+              <li><a href="index.html">Pocetna</a></li>
               <li><a href="">Info</a></li>
               <li><a href="">Kategorije</a></li>
               <li><a href="">Kontakt</a></li>
